# tmux-hover-select

./: .gitignore  Cargo.toml  README.md  hover-select.sh  hover_select.py  tmux-hover-select.conf
src/: main.rs
src/platform/: common.rs  linux.rs  macos.rs  mod.rs
