[package]
name = "hover-select"
version = "0.1.0"
edition = "2021"
description = "Select tmux panes on mouse hover"
license = "MIT OR Apache-2.0"

[[bin]]
name = "hover-select"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"

[profile.release]
opt-level = 3
lto = true
strip = true
